--- a/content/hi-dollars-token-sale.html
+++ b/content/hi-dollars-token-sale.html
@@ -4,13 +4,15 @@
             Token Sale pdf in new
             window</a>
         <div class="accordion">
+            <iframe src="/pdf/hi-dollars-token-sale-tnc_7May_v1.pdf" style="border: 0" width="100%" height="700" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
 
 <script>
+    // $('.accordion').html('<iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=' + window.location.origin + '/pdf/hi-dollars-token-sale-tnc_7May_v1.pdf" style="border: 0" width="100%" height="700" frameborder="0" scrolling="no"></iframe>');
     $(document).ready(function () {
 
-        $('.accordion').html('<iframe src="https://mozilla.github.io/pdf.js/web/viewer.html?file=' + window.location.origin + '/pdf/hi-dollars-token-sale-tnc_7May_v1.pdf" style="border: 0" width="100%" height="700" frameborder="0" scrolling="no"></iframe>');
+        // $('.accordion').html('<iframe src="' + window.location.origin + '/pdf/hi-dollars-token-sale-tnc_7May_v1.pdf" style="border: 0" width="100%" height="700" frameborder="0" scrolling="no"></iframe>');
     });
 </script>
